# flexi_config_reader

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD  CMakeLists.txt  Dockerfile  LICENSE  MODULE.bazel  README.md  WORKSPACE  code-coverage.cmake  compose.yml  config_actions.h  config_grammar.h  config_test.cpp  example.cfg  example.toml  include_file_test.cpp  jsonish_test.cpp  maps.peg  maps_test.cpp  maps_test.py  my_config.peg  my_config_reader.py  my_config_test.py  requirements.txt  toml.abnf  toml_grammar.h  toml_test.cpp
.github/workflows/: cmake.yml
c++/: CMakeLists.txt  config_actions.h  config_classes.h  config_exceptions.h  config_grammar.h  config_helpers.h  config_selector.h  config_test.cpp  include_file_test.cpp
cmake/: add_clang_format.cmake
cmake/modules/: FindClangTools.cmake
cpp/: CMakeLists.txt  config_actions.h  config_build.cpp  config_classes.h  config_exceptions.h  config_grammar.h  config_helpers.cpp  config_helpers.h  config_reader.cpp  config_reader.h  config_reader_example.cpp  config_selector.h  config_test.cpp  include_file_test.cpp  jsonish_test.cpp  logger.h  math_actions.h  math_grammar.cpp  math_grammar.h  math_helpers.cpp  math_helpers.h  toml_grammar.h  toml_test.cpp  utils.h
examples/: BUILD  config_example1.cfg  config_example10.cfg  config_example11.cfg  config_example12.cfg  config_example13.cfg  config_example14.cfg  config_example15.cfg  config_example16.cfg  config_example16_base.cfg  config_example16_overlay.cfg  config_example17.cfg  config_example18.cfg  config_example2.cfg  config_example3.cfg  config_example4.cfg  config_example5.cfg  config_example6.cfg  config_example7.cfg  config_example8.cfg  config_example9.cfg  example.cfg
examples/config_root/test/: config_example_base.cfg  config_relative.cfg
examples/env/: env_example1.cfg  env_example2.cfg  env_example3.cfg
examples/invalid/: config_cyclic1.cfg  config_cyclic2.cfg  config_empty.cfg  config_malformed1.cfg  config_malformed2.cfg  config_malformed3.cfg  config_malformed4.cfg
examples/nested/: config_nested1.cfg  config_nested2.cfg  config_nested3.cfg  dupe_include.cfg  dupe_include2.cfg  dupe_include_2.cfg  dupe_include_3.cfg  dupe_include_4.cfg  dupe_include_dupe.cfg  expression_override.cfg  nested_flat_include.cfg
examples/optional/: optional_config.cfg  optional_config2.cfg  optional_config3.cfg  optional_config_non_optional.cfg  optional_exists.cfg
include/: BUILD
include/cfg_reader/: config_actions.h  config_classes.h  config_reader.h  config_selector.h  math_actions.h  math_grammar.h
include/config/: config_actions.h  config_classes.h  config_grammar.h  config_reader.h  config_selector.h
include/flexi_cfg/: logger.h  parser.h  reader.h  utils.h  visitor-internal.h  visitor-json.h  visitor.h
include/flexi_cfg/config/: actions.h  classes.h  exceptions.h  grammar.h  helpers.h  parser-internal.h  reader.h  selector.h  trace-internal.h
include/flexi_cfg/details/: ordered_map.h  type_traits.h
include/flexi_cfg/math/: actions.h  grammar.h  helpers.h
include/math/: actions.h  grammar.h  helpers.h
python/: BUILD  CMakeLists.txt  __init__.py  flexi_cfg.cpp  flexi_cfg_py.cpp  helpers.py  my_config.peg  my_config_reader.py  my_config_test.py  test_flexi_cfg.py  test_helpers.py  test_my_config.py
python/flexi_cfg/: CMakeLists.txt  __init__.py
src/: BUILD  CMakeLists.txt  config_build.cpp  config_helpers.cpp  config_parser.cpp  config_reader.cpp  config_reader_example.cpp  include_file_test.cpp  math_helpers.cpp
tests/: .clang-tidy  BUILD  CMakeLists.txt  config_exception_test.cpp  config_grammar_test.cpp  config_helpers_test.cpp  config_merge_test.cpp  config_parse_test.cpp  math_test.cpp  ordered_map_test.cpp  utils_test.cpp
