module(
    name = "flexi_cfg",
    version = "0.8.1",
)

bazel_dep(name = "rules_cc", version = "0.2.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "pybind11_bazel", version = "2.12.0")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1", repo_name = "com_google_googletest")

bazel_dep(name = "pegtl", version = "3.2.8")
bazel_dep(name = "magic_enum", version = "0.9.7")
bazel_dep(name = "fmt", version = "10.2.1")
bazel_dep(name = "range-v3", version = "0.12.0")
